# Super_Prismora

./: .dockerignore  .env.example  .env.monitoring  .eslintrc.json  .gitignore  .prettierignore  AI-MODEL-TESTING.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  PostdeploymentNextsteps.md  README.md  SuperPrismora_26022026_findings.md  SuperWeb_BuildtoDeploy.md  TESTING.md  TRACK11_COMPLETION.md  TRACK12-COMPLETION.md  TRACK13_COMPLETION_SUMMARY.md  TRACK14-COMPLETION.md  TRACK15-COMPLETION.md  TRACK2-COMPLETION.md  TRACK3-COMPLETION.md  TRACK6_COMPLETION_SUMMARY.md  TRACK7-COMPLETION.md  TRACK8-COMPLETION.md  TRACK9_COMPLETION.md  WAVE5_COMPLETION_REPORT.md  WAVE5_FINAL_SUMMARY.txt  WAVE5_PHASE1_E2E_TESTING_REPORT.md  WAVE5_PHASE3_SECURITY_AUDIT.md  WAVE5_PHASE4_PRODUCTION_DEPLOYMENT_GUIDE.md  ai-test-config.ini  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  hello_world.py  package-lock.json  package.json  playwright.config.ts  pytest.ini  (+4 more)
services/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  TRACK4_COMPLETION_SUMMARY.md  openapi.yaml  pyproject.toml
services/app/: __init__.py  config.py  database.py  main.py  middleware.py
services/integration/: pyproject.toml
services/integration/src/: health_routes.py
services/integration/src/events/: __init__.py  consumers.py  producers.py  registry.py  schemas.py
services/integration/src/gamification/: __init__.py  (+7 more)
services/kong/: README.md  docker-compose.yml  kong.yml  setup.sh
services/services/analytics/: __init__.py  app.py
services/services/booking/: __init__.py  app.py
services/services/image/: __init__.py  app.py
services/services/marketplace/: __init__.py  app.py
services/services/notification/: __init__.py  app.py
services/services/search/: __init__.py  app.py
(+260 files in other folders)
